# NekoMusicForAndroid

./: .gitignore  .gitmodules  README.md  local.properties  package-lock.json  readme.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DynamicIslandRenderer.cpp  LrcParser.c  VRHUDRenderer.cpp
app/src/main/cpp/openxr_loader_build/: CMakeLists.txt
app/src/main/drawable/: widget_preview_icon.xml
app/src/main/java/com/neko/music/: MainActivity.kt  MusicPlayerService.kt  NekoMusicApplication.kt  SplashActivity.kt
app/src/main/java/com/neko/music/accessibility/: VRLyricAccessibilityService.kt
app/src/main/java/com/neko/music/config/: AppConfig.kt
app/src/main/java/com/neko/music/data/api/: FavoriteApi.kt  MusicApi.kt  PlaylistApi.kt  UserApi.kt
app/src/main/java/com/neko/music/data/cache/: MusicCacheManager.kt
app/src/main/java/com/neko/music/data/database/: AppDatabase.kt  PlaylistDao.kt  PlaylistEntity.kt
app/src/main/java/com/neko/music/data/manager/: ACWChallengeSolver.kt  AppUpdateManager.kt  PlaylistManager.kt  RecentPlayManager.kt  SearchHistoryManager.kt  TokenManager.kt
app/src/main/java/com/neko/music/data/model/: Artist.kt  Music.kt  Playlist.kt  SearchHistory.kt  User.kt
app/src/main/java/com/neko/music/desktoplyric/: DesktopLyricService.kt  VRHUDLyricManager.kt  VRHUDService.kt
app/src/main/java/com/neko/music/floatwindow/: CircularProgressView.kt  FuckChinaOSFloatService.kt  PlayAnimationView.kt
app/src/main/java/com/neko/music/service/: MusicPlayerManager.kt
app/src/main/java/com/neko/music/ui/components/: BottomNavigation.kt  KaqiuString.kt  KaqiuStringResource.kt  KaqiuText.kt  PlaylistBottomSheet.kt
app/src/main/java/com/neko/music/ui/screens/: AboutScreen.kt  AccountInfoScreen.kt  ArtistDetailScreen.kt  CacheManagementScreen.kt  DiscoverScreen.kt  FavoriteScreen.kt  ForgotPasswordScreen.kt  HomeScreen.kt  LatestScreen.kt  LoginScreen.kt  MineScreen.kt  MyPlaylistsScreen.kt  PlayerScreen.kt  PlaylistDetailScreen.kt  PlaylistScreen.kt  RankingScreen.kt  RecentPlayScreen.kt  RegisterScreen.kt  SearchResultScreen.kt  SettingsScreen.kt  UploadedMusicScreen.kt
app/src/main/java/com/neko/music/ui/theme/: Color.kt  KaqiuString.kt  Type.kt
app/src/main/java/com/neko/music/util/: AuthErrorHandler.kt  DesktopLyricRenderer.kt  DeviceDetector.kt  DownloadHelper.kt  DynamicIslandRenderer.kt  KaqiuLanguageUtil.kt  LrcParser.kt  LyricScrollManager.kt  VRHUDRenderer.kt
app/src/main/java/com/neko/music/vr/: VRActivity.kt
app/src/main/java/com/neko/music/widget/: MusicWidgetProvider.kt  MusicWidgetUpdateService.kt
app/src/main/res/drawable/: circular_progress.xml  ic_favorite_border.xml  ic_widget_lyric.xml  ic_widget_previous.xml  splash_background.xml  splash_initial_background.xml  widget_background.xml  widget_preview_bg.xml
app/src/main/res/layout/: float_window_layout.xml  music_widget.xml  music_widget_preview.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: data_extraction_rules.xml  music_widget_info.xml  vr_lyric_accessibility_service_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
